@@ -11,5 +11,8 @@ function(x, ...)
     sum <- sort(c(x$oecosimu$statistic, summary(x$oecosimu$simulated)))
     print(sum, ...)
     cat("\nz-value of the statistic:", format(x$oecosimu$z), "\n\n")
-    NextMethod("print", x)
+    cl <- class(x)
+    if (length(cl) > 1 && cl[2] != "list")
+        NextMethod("print", x)
+    invisible(x)   
 }
